--- a/LandingPage/style.css
+++ b/LandingPage/style.css
@@ -27,7 +27,7 @@ body {
   align-items: center;
   flex-direction: column;
   margin-bottom: 20px;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 .logo {
@@ -45,4 +45,16 @@ body {
   font-size: 20px;
   color: #2d4373;
   font-weight: bold;
+}
+.top-links {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+}
+.top-links a {
+  text-decoration: none;
+  color: #000;
+  text-align: center;
+  justify-content: center;
+  padding: 5px;
 }
