--- a/LandingPage/style.css
+++ b/LandingPage/style.css
@@ -50,11 +50,24 @@ body {
   position: absolute;
   top: 10px;
   right: 20px;
+  border-inline: none;
 }
 .top-links a {
   text-decoration: none;
-  color: #000;
+  color: #fff;
   text-align: center;
   justify-content: center;
-  padding: 5px;
+  padding: 10px;
+  border-inline: none;
+}
+.top-links a button {
+  background-color: #78b3ce;
+  border-radius: 5px;
+  padding: 10px;
+  border-inline: none;
+  color: #fff;
+  font-family: sans-serif;
+}
+.top-links button:hover {
+  background-color: #7e96c9;
 }
