--- a/Login/style.css
+++ b/Login/style.css
@@ -12,6 +12,27 @@ body {
   background-color: #cfe6f5;
   font-family: Arial, sans-serif;
 }
+.container {
+  display: flex;
+  align-items: center;
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Efek bayangan */
+  padding: 20px;
+  max-width: 600px;
+  width: 100%;
+}
+
+.login-container input {
+  width: 250px;
+  padding: 10px 15px;
+  margin-bottom: 15px;
+  font-size: 14px;
+  border: none;
+  border-radius: 5px;
+  gap: 10px;
+  background-color: #d9eafc;
+}
 
 .login-container {
   display: flex;
@@ -36,7 +57,7 @@ body {
   align-items: center;
   justify-content: flex-start;
   gap: 10px;
-  background-color: #ffffff;
+  background-color: #d9eafc;
   border: none;
   border-radius: 8px;
   padding: 12px 20px;
@@ -64,6 +85,8 @@ body {
 }
 
 .illustration img {
-  width: 300px; /* Sesuaikan ukuran sesuai kebutuhan */
-  height: auto;
+  width: 200px;
+  height: 200px;
+  object-fit: cover; /* Memastikan gambar memenuhi lingkaran tanpa merusak proporsi */
+  border-radius: 50%; /* Agar gambar juga berbentuk lingkaran */
 }
